<resources>
    <string name="app_name">Catalogue Movie</string>
    <string name="search">Search</string>
    <string name="search_hint">Enter Title...</string>
    <string name="upcoming_tab">Upcoming</string>
    <string name="now_playing_tab">Now Playing</string>
    <string name="favourite_tab">Favourite</string>
    <string name="detail">Detail</string>
    <string name="label_detail_activity">Detail Movie</string>

    <string name="title">Title</string>
    <string name="release_date">Release Date</string>
    <string name="overview">Overview</string>

    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="roshan_din_firozi">Roshan Din Firozi</string>
    <string name="roze_d_frozzy_gmail_com">roze.d.frozzy@gmail.com</string>

    <string name="key_locale">Locale</string>
    <string name="key_setting_locale">setting_locale</string>
    <string name="key_setting_locale_summary">Change Phone Locale</string>
    <string name="key_setting_locale_title">Language</string>

    <string name="remove_favourite">Removed from favourite</string>
    <string name="save_favourite">Save as favourite</string>
    <string name="appwidget_text">Favourite Movies</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">You don\'t have any favourite movies</string>
    <string name="key_notification">Notification</string>
    <string name="label_daily_reminder">Daily Reminder</string>
    <string name="label_daily_reminder_summary">Set daily reminder at 07:00</string>
    <string name="key_reminder_daily">reminder_daily</string>
    <string name="key_reminder_release">reminder_release</string>
    <string name="label_release_reminder">Released Movie Reminder</string>
    <string name="label_release_reminder_summary">Set daily reminder about release movie at 08:00</string>

    <string name="label_alarm_daily_reminder">Catalogue Movie is missing you</string>
    <string name="today_on_cinema">Today on cinema: </string>

</resources>
