<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/key_notification">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_reminder_daily"
            android:summary="@string/label_daily_reminder_summary"
            android:title="@string/label_daily_reminder" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_reminder_release"
            android:summary="@string/label_release_reminder_summary"
            android:title="@string/label_release_reminder" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/key_locale">

        <Preference
            android:key="@string/key_setting_locale"
            android:summary="@string/key_setting_locale_summary"
            android:title="@string/key_setting_locale_title">

        </Preference>

    </PreferenceCategory>

</PreferenceScreen>